--- a/app/src/main/res/layout/activity_main_organization.xml
+++ b/app/src/main/res/layout/activity_main_organization.xml
@@ -6,6 +6,74 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/main_CARD_welcomeCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp"
+        android:layout_centerInParent="true"
+        app:cardElevation="4dp"
+        android:visibility="visible"
+        app:cardBackgroundColor="@android:color/white">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/light_green"
+            android:gravity="center"
+            android:padding="16dp">
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/main_BTN_closeWelcomeScreen"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="155dp"
+                app:icon="@android:drawable/ic_menu_close_clear_cancel"
+                app:iconSize="30dp"
+                app:iconTint="@color/black"
+                app:backgroundTint="#80E27E"
+                app:cornerRadius="12dp" />
+
+            <!-- First MaterialTextView -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/main_MTV_welcomeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome!"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                android:layout_marginBottom="8dp"/>
+
+            <!-- Second MaterialTextView -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/main_MTV_sentence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Every meal supports a cause."
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"/>
+            <!-- Second MaterialTextView -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/main_MTV_Thankyou"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thank you for joining us!"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_buttons"
         android:layout_width="match_parent"
