--- a/app/src/main/res/layout/activity_main_restaurant.xml
+++ b/app/src/main/res/layout/activity_main_restaurant.xml
@@ -100,91 +100,91 @@
         <!-- Parent layout -->
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
+            android:layout_height="524dp"
             android:background="@color/white"
-            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/main_BTN_close"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginBottom="5dp"
-                    app:icon="@android:drawable/ic_menu_close_clear_cancel"
-                    app:iconGravity="textStart"
-                    app:iconTint="@color/black"
-                    app:iconPadding="5dp"
-                    app:backgroundTint="@color/light_green"
-                    app:cornerRadius="0dp"
-                    android:layout_alignParentLeft="true" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/main_BTN_close"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="5dp"
+                app:backgroundTint="@color/light_green"
+                app:cornerRadius="0dp"
+                app:icon="@android:drawable/ic_menu_close_clear_cancel"
+                app:iconGravity="textStart"
+                app:iconPadding="5dp"
+                app:iconTint="@color/black" />
 
             <!-- App Title -->
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/donation_LBL_headline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/new_donation"
                 android:layout_marginStart="50dp"
                 android:layout_marginBottom="10dp"
+                android:text="@string/new_donation"
+                android:textColor="@color/black"
                 android:textSize="28sp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
+                android:textStyle="bold" />
 
             <!-- Text Field for Name -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/title"
                 app:boxStrokeColor="@color/light_green"
                 app:cursorColor="@color/black"
-                app:hintTextColor="@color/light_green"
-                android:layout_marginBottom="10dp"
-                android:hint="@string/title">
+                app:hintTextColor="@color/light_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/donation_TIE_title"
                     android:layout_width="match_parent"
-                    android:textColor="@color/black"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Text Field for Amount -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="Amount"
                 app:boxStrokeColor="@color/light_green"
                 app:cursorColor="@color/black"
-                app:hintTextColor="@color/light_green"
-                android:layout_marginBottom="10dp"
-                android:hint="Amount">
+                app:hintTextColor="@color/light_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/donation_TIE_amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberDecimal"
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Text Field for Description -->
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="Description"
                 app:boxStrokeColor="@color/light_green"
                 app:cursorColor="@color/black"
-                app:hintTextColor="@color/light_green"
-                android:hint="Description">
+                app:hintTextColor="@color/light_green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/donation_TIE_description"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:inputType="textMultiLine"
-                    android:textColor="@color/black"
+                    android:maxLines="4"
                     android:minLines="1"
-                    android:maxLines="4" />
+                    android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -193,11 +193,11 @@
                 android:id="@+id/donation_BTN_addPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Add Donation Photo"
                 android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                app:backgroundTint="#80E27E"
                 android:visibility="visible"
+                app:backgroundTint="#80E27E"
                 app:cornerRadius="12dp" />
 
 
@@ -206,14 +206,12 @@
                 android:id="@+id/donation_BTN_add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Add New Donation"
                 android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                app:backgroundTint="#80E27E"
                 android:visibility="visible"
+                app:backgroundTint="#80E27E"
                 app:cornerRadius="12dp" />
-
-
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -371,6 +369,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                app:boxStrokeColor="@color/light_green"
+                app:cursorColor="@color/black"
+                app:hintTextColor="@color/light_green"
                 android:hint="@string/amount">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -378,7 +379,7 @@
                     android:layout_width="match_parent"
                     android:textColor="@color/black"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName" />
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
